# IndigoPlayer

./: .autotools  .cproject  .gitignore  .project  Capital.cpp  ChangeLog  EnumTypes.h  IndigoPlayer.sh  Makefile.am  Makefile.in  README  Settings.h  aclocal.m4  base.glade  basePlayerWin.glade  confFile  configure  configure.ac
Debug/: Capital.d  IndigoPlayer  makefile  sources.mk  subdir.mk
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
m4/: ChangeLog
po/: Makefile.in  POTFILES  POTFILES.in  indigoplayer.pot  sk.gmo  sk.po
src/: Capital.cpp  ConfigFile.cpp  ConfigFile.h  Configuration.cpp  Configuration.h  EnumTypes.h  Makefile.am  OneInstance.cpp  OneInstance.h  PipeExchange.cpp  PipeExchange.h  ProgramUtilitys.cpp  ProgramUtilitys.h  Settings.h  indigoplayer
src/ClassHelper/: ClassHelper.cpp  ClassHelper.h
src/Communication/: ConfigFile.cpp  ExclusiveLock.cpp  ExclusiveLock.h  PipeExchange.cpp  PipeExchange.h  PipeReader.cpp  PipeReader.h
src/DataStructures/: GraphicData.h  LoadedStreams.cpp  LoadedStreams.h  PlayParameters.cpp  PlayParameters.h
src/Files/: ConfigFile.cpp  ConfigFile.h  FileUtilities.cpp  FileUtilities.h  IndigoFile.cpp  IndigoFile.h  Logger.cpp  Logger.h  PathLoader.cpp  PathLoader.h
src/Graphic/: BasePlayerWindow.cpp  BasePlayerWindow.h  ControlPanel.cpp  ControlPanel.h  Display.cpp  Display.h  FileChoosers.cpp  FileChoosers.h  GraphicLoader.cpp  GraphicLoader.h  MainWindow.cpp  MainWindow.h  OpenFileDialog.cpp  OpenFileDialog.h  Options.cpp  Options.h  PlayerWindow.cpp  PlayerWindow.h  PlaylistGraphic.cpp  PlaylistGraphic.h  ThisOptions.cpp  ThisOptions.h  ThisOptionsLoad.cpp  ThisOptionsLoad.h  VideoBoard.cpp  VideoBoard.h
src/GraphicLogic/: GraphicLoader.cpp  GraphicLoader.h  GraphicPathLoader.cpp  GraphicPathLoader.h  Playlist.cpp  Playlist.h  WindowBridge.cpp  WindowBridge.h
src/Interfaces/: Bridge.cpp  Bridge.h  Callable.cpp  Callable.h  PlayerSignals.cpp  PlayerSignals.h  VideoFilters.cpp  VideoFilters.h
src/MyWidget/: FileChoosers.cpp  FileChoosers.h  MyComboBox.cpp  MyComboBox.h
src/Player/: ColorSetings.cpp  ColorSetings.h  GraphicData.cpp  GraphicData.h  IndigoPlayer.cpp  IndigoPlayer.h  OneFilePlayer.cpp  OneFilePlayer.h  Player.cpp  Player.h  Playlist.cpp  Playlist.h  SavedFileInfo.cpp  SavedFileInfo.h  ShortKeys.cpp  ShortKeys.h
src/PlayerKernel/: MediaPackage.cpp  MediaPackage.h  MplayerInterface.cpp  MplayerInterface.h  PlayerKernel.cpp  PlayerKernel.h  SavedData.cpp  SavedData.h  ScriptGenerator.cpp  ScriptGenerator.h  StringAnalyze.cpp  StringAnalyze.h  VideoFilters.cpp  VideoFilters.h
ui/: controlpanel.glade  openwindow.glade  options.glade  popupwindow.glade  (+2 more)
(+8 files in other folders)
