SUBDIRS=bin po

playerextradir = $(datadir)/@PACKAGE@
playerextra_DATA = ui/arrowc.png \
	ui/playerwindow.glade \
	ui/arrow.png \
	ui/myimage.svg \
	ui/popupwindow.glade \
	ui/openwindow.glade \
	ui/thisoptions.glade
	
playeraextradir = $(datadir)/@PACKAGE@/controlpanel
playeraextra_DATA = ui/controlpanel/backwardC.png \
	ui/controlpanel/displayB.png \
	ui/controlpanel/forwardC.png \
	ui/controlpanel/pause.png \
	ui/controlpanel/reloadC.png \
	ui/controlpanel/cancelC.png \
	ui/controlpanel/filmA.png \
	ui/controlpanel/gearC.png \
	ui/controlpanel/playlistA.png \
	ui/controlpanel/sound.png \
	ui/controlpanel/controlpanel.glade \
	ui/controlpanel/folderC.png \
	ui/controlpanel/mute.png \
	ui/controlpanel/play.png
