bin_PROGRAMS=indigoplayer

indigoplayer_SOURCES=Capital.cpp ConfigFile.cpp ClassHelper/ClassHelper.cpp \
Files/FileUtilities.cpp Files/IndigoFile.cpp Files/Logger.cpp \
Graphic/ControlPanel.cpp Graphic/OpenFileDialog.cpp Graphic/PlayerWindow.cpp Graphic/PlaylistGraphic.cpp \
Graphic/ThisOptions.cpp Graphic/ThisOptionsLoad.cpp Graphic/VideoBoard.cpp \
GraphicLogic/GraphicLoader.cpp GraphicLogic/Playlist.cpp GraphicLogic/WindowBridge.cpp \
Interfaces/Bridge.cpp Interfaces/Callable.cpp Interfaces/PlayerSignals.cpp Interfaces/VideoFilters.cpp \
MyWidget/FileChoosers.cpp MyWidget/MyComboBox.cpp \
Player/ColorSetings.cpp Player/GraphicData.cpp Player/IndigoPlayer.cpp Player/OneFilePlayer.cpp \
Player/SavedFileInfo.cpp Player/ShortKeys.cpp \
PlayerKernel/MediaPackage.cpp PlayerKernel/MplayerInterface.cpp PlayerKernel/PlayerKernel.cpp \
PlayerKernel/ScriptGenerator.cpp

AM_CXXFLAGS = $(DEPS_CFLAGS)

indigoplayer_LDADD = $(DEPS_LIBS)